--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fullcalendar/common": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/react": "^5.11.2",
+    "@fullcalendar/resource-timeline": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
     "next": "^12.3.0",
     "next-transpile-modules": "^9.0.0",
